--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -56,7 +56,7 @@
                 <p class="text-md text-black"
                >Bifurcation of OS balances LC</p>
             </div>
-            
+
             </mat-card>
         </div>
 
@@ -74,8 +74,8 @@
             <mat-card routerLink="updated-list" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <mat-icon class="mb-2 text-green">file_copy</mat-icon>
-                
-                
+
+
                 <p class="text-md text-black">Updated List of defaulters of a circle for each MCO</p>
             </div>
             </mat-card>
@@ -100,7 +100,7 @@
             <mat-card routerLink="fa-view-wise" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <mat-icon class="mb-2 text-green">file_copy</mat-icon>
-                
+
                 <p class="text-md text-black" >FAs will see Circle-Wise/Party Wise Early Warning reports on NPLs and
                 Charge-off loans for recovery persuasion.</p>
             </div></mat-card>
@@ -128,14 +128,14 @@
 
         <div class="col-lg-4 col-sm-12">
             <mat-card routerLink="loan-amount" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
-                
+
                 <div class="d-grid" style="justify-items: center;">
                     <mat-icon class="mb-2 text-green">file_copy</mat-icon>
-                
+
                 <p class="text-md text-black"
                 >Loan amounts likely to be converted into default</p>
             </div>
-            
+
             </mat-card>
         </div>
 
@@ -145,7 +145,7 @@
 
         <div class="col-lg-4 col-sm-12">
             <mat-card (click)="voucherPostingDay()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
-                
+
                 <div class="d-grid" style="justify-items: center;">
                     <mat-icon class="mb-2 text-green">file_copy</mat-icon>
                 <p class="text-md text-black"
@@ -189,7 +189,7 @@
             <mat-card (click)="disbursement()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <mat-icon class="mb-2 text-green">file_copy</mat-icon>
-                
+
                 <p class="text-md text-black"
             >Disbursement Performance Report</p>
         </div></mat-card>
@@ -212,7 +212,7 @@
             <mat-card (click)="loanAccountBalance()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <mat-icon class="mb-2 text-green">file_copy</mat-icon>
-                
+
                 <p class="text-md text-black"
             >Loan Account Balancing</p>
         </div></mat-card>
@@ -226,6 +226,44 @@
             >Insurance Report</p>
         </div></mat-card>
         </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="laFileProgress()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+                    <p class="text-md text-black"
+                    >LA File Progress Summary</p>
+                </div></mat-card>
+        </div>
+
+    </div>
+
+    <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="loanInfoDetails()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+
+                    <p class="text-md text-black"
+                    >Loan Information Details</p>
+                </div></mat-card>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card routerLink="get-unsuccessful-login" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+
+                    <p class="text-md text-black"
+                    >Get Unsuccessful Login</p>
+                </div>
+
+            </mat-card>
+        </div>
+
+
     </div>
 
 
