--- a/src/app/modules/reports/get-unsuccessful-login/get-unsuccessful-login.component.html
+++ b/src/app/modules/reports/get-unsuccessful-login/get-unsuccessful-login.component.html
@@ -75,13 +75,13 @@
                 matSortDirection="asc"
                 matSortDisableClear
             >
-                <ng-container matColumnDef="Zone">
+                <ng-container matColumnDef="PPNO">
                     <mat-header-cell *matHeaderCellDef
                     >Zone Name
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.ZoneName
+                        report.PPNo
                         }}</mat-cell>
                 </ng-container>
 
@@ -95,135 +95,43 @@
                         }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="Circle">
+                <ng-container matColumnDef="Employee">
                     <mat-header-cell *matHeaderCellDef
-                    >Circle Code
+                    >Employee Name
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.CircleId
+                        report.EmployeeName
                         }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="Dob">
+                <ng-container matColumnDef="EmployeeGroup">
                     <mat-header-cell *matHeaderCellDef
-                    >Date of Birth
+                    >Employee Group
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.DOB
+                        report.EmployeeGroup
                         }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="Ndd">
+                <ng-container matColumnDef="EmployeeLocation">
                     <mat-header-cell *matHeaderCellDef
-                    >Next Due Date
+                    >Employee Location
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.NextDueDate
+                        report.EmployeeLocation
                         }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="MajorBorrower">
+                <ng-container matColumnDef="PrevLogin">
                     <mat-header-cell *matHeaderCellDef
-                    >Major Borrower
+                    >Prev Login Attempts
                     </mat-header-cell
                     >
                     <mat-cell *matCellDef="let report">{{
-                        report.MajorBorrower
-                        }}</mat-cell>
-                </ng-container>
-
-
-                <ng-container matColumnDef="Lcno">
-                    <mat-header-cell *matHeaderCellDef
-                    >LC #
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.LcNO
-                        }}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="Cnic">
-                    <mat-header-cell style="min-width: 120px;" *matHeaderCellDef>CNIC</mat-header-cell>
-                    <mat-cell style="min-width: 120px;" *matCellDef="let report">{{
-                        report.Cnic
-                        }}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="Name">
-                    <mat-header-cell *matHeaderCellDef
-                    >Name
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.CustomerName
-                        }}</mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="FatherName">
-                    <mat-header-cell *matHeaderCellDef>Father Name</mat-header-cell>
-                    <mat-cell *matCellDef="let report">{{
-                        report.FatherName
-                        }}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="Address">
-                    <mat-header-cell *matHeaderCellDef>Address</mat-header-cell>
-                    <mat-cell *matCellDef="let report">{{
-                        report.PermanetAddress
-                        }}</mat-cell>
-                </ng-container>
-
-                <ng-container  matColumnDef="Agps">
-                    <mat-header-cell *matHeaderCellDef
-                    >Major Borrower
-                    </mat-header-cell
-                    >
-                    <mat-cell class="text-center" *matCellDef="let report">{{
-                        report.MajorBorrower
-                        }}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="Bcl">
-                    <mat-header-cell *matHeaderCellDef
-                    >Borrower Credit Limit
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.SanctionLimit
-                        }}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="descr">
-                    <mat-header-cell *matHeaderCellDef
-                    >DESCR
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.DESCR
-                        }}</mat-cell>
-                </ng-container>
-
-
-                <ng-container matColumnDef="Los">
-                    <mat-header-cell *matHeaderCellDef
-                    >loan Outstanding
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.LoanOutStanding
-                        }}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="OtherCharges">
-                    <mat-header-cell *matHeaderCellDef
-                    >Other Charges
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report?.OtherCharges
+                        report.PrevLoginAttempts
                         }}</mat-cell>
                 </ng-container>
 
