grid show hide documents

--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -136,7 +136,7 @@
 
         <div class="row pt-3">
 
-            <div class="table-responsive">
+            <div class="table-responsive" *ngIf="showGrid">
 
                 <table class="table table-striped">
                     <thead>
