--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -16,7 +16,7 @@
         <div class="row pt-3">
             <div class="col-lg-6 col-sm-12">
                 <app-zone-branch-circle [form]="PostDocument" [should_show_circle]="false"
-                                        (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+                                        (branchZoneCircleData)="getAllData($event)" [should_filter]="false"></app-zone-branch-circle>
             </div>
 
             <div class="col-lg-4 col-sm-12">
