--- a/src/app/modules/report-managment/exception-log/exception-log.component.html
+++ b/src/app/modules/report-managment/exception-log/exception-log.component.html
@@ -10,9 +10,9 @@
         <div class="col-lg-3 col-sm-12 self-center mt-2">
             <p class="text-right">
                 <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
-                        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                        aria-expanded="false" aria-controls="collapseExample">
-                    <mat-icon class="mr-2" id="arrow">keyboard_arrow_down</mat-icon>
+                        color="primary"
+                        aria-expanded="false" aria-controls="collapseExample" onclick="toggleCollapse()">
+                    <mat-icon class="mr-2" id='arrow'>keyboard_arrow_down</mat-icon>
                     Advance Filter
                 </button>
             </p>
