--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -616,9 +616,15 @@ img {
 
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-    #collapseExample {
-        min-height: 00px;
+    .col-lg-3{
+        padding:0 12px;
     }
+    .col-lg-4{
+        padding:0 12px;
+    }
+    // #collapseExample {
+    //     min-height: 00px;
+    // }
     .collapsing {
         height: 0;
         overflow: hidden;
