--- a/src/app/modules/customer/correction-phone/correction-phone.component.html
+++ b/src/app/modules/customer/correction-phone/correction-phone.component.html
@@ -23,7 +23,7 @@
 
 
     <div class="collapse show" id="collapseExample">
-        <div class="card card-body">
+        <div class="card card-body" [formGroup]="cpForm">
 
 
             <div class="form-group kt-form__group row">
@@ -31,22 +31,8 @@
                 <!-- <kt-alert *ngIf="hasFormErrors" class="col-lg-12" type="warn" [duration]="30000" [showCloseButton]="true" (close)="onAlertClose($event)">
                   Please enter valid Input
                 </kt-alert> -->
-
-                <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile">
-
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">Zone<strong class="matMandatory">*</strong></mat-label>
-                        <input matInput formControlName="Zone" maxlength="13" autocomplete="off" readonly="readonly"/>
-                    </mat-form-field>
-                </div>
-
-                <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile">
-
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">Branch<strong class="matMandatory">*</strong></mat-label>
-                        <input matInput formControlName="Branch" maxlength="13" autocomplete="off" readonly="readonly"/>
-                    </mat-form-field>
-                </div>
+                <app-zone-branch-circle [should_show_circle]="false" [form]="cpForm"
+                                        (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                 <div class="col-lg-3 col-sm-12 kt-margin-bottom-20-mobile">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">CNIC#</mat-label>
@@ -77,7 +63,7 @@
          style="flex-wrap: wrap">
     </div>
     <div class="flex flex-auto overflow-y-scroll" style="flex-direction: column;">
-        <form [formGroup]="cpForm" class="kt-form kt-form--group-seperator-dashed">
+        <form class="kt-form kt-form--group-seperator-dashed">
 
 
             <div *ngIf="phoneCellTab" class="form-group kt-form__group row justify-content-center">
