--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -22,11 +22,14 @@
 
                         <div class="col-lg-12 kt-margin-bottom-20-mobile">
 
-                            <div *ngFor="let url of images">
-                                <img
-                                    style="width:200px;height: 200px;display: block;margin-left: auto;margin-right: auto;"
-                                    class="rounded-circle text-right" mat-card-md-image [src]="url">
 
+                            <div *ngIf="images">
+                                <div *ngFor="let url of images">
+                                    <img
+                                        style="width:200px;height: 200px;display: block;margin-left: auto;margin-right: auto;"
+                                        class="rounded-circle text-right" mat-card-md-image [src]="url">
+
+                                </div>
                             </div>
                             <!--<button style="display: block;margin-left: auto;margin-right: auto;" type="button" mat-raised-button (click)="fileInput.click()">Choose File</button>
                             <input hidden (change)="onFileSelected()" #fileInput type="file" id="file">-->
