--- a/src/app/modules/reports/get-unsuccessful-login/get-unsuccessful-login.component.html
+++ b/src/app/modules/reports/get-unsuccessful-login/get-unsuccessful-login.component.html
@@ -37,6 +37,16 @@
 
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label class="customMatLabel">PPNO:</mat-label>
+                                <input matInput placeholder="Enter PPNO" formControlName="PPNo"
+                                       appNumberOnly  autocomplete="off"/>
+                            </mat-form-field>
+                        </div>
+                    </div>
+
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                             <button class="mt-2 bg-gray-500 "
                                     mat-raised-button color="primary" (click)="find()">
                                 <mat-icon class="mr-2">search</mat-icon>
