things customer profile

--- a/src/app/modules/customer/correction-phone/correction-phone.component.html
+++ b/src/app/modules/customer/correction-phone/correction-phone.component.html
@@ -118,6 +118,7 @@
                                         </div>
                                         <div class="col-lg-9 pl-0">
                                             <input class="border bg-white rounded p-3 w-100" placeholder="34555555555"
+                                                   appNumberOnly
                                                    formControlName="PhoneCell" autocomplete="off" maxlength="10"/>
                                         </div>
                                     </div>
