--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -20,6 +20,7 @@
     <!-- Header -->
 
 
+<div class="flex-inline flex-column">
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <!-- Header -->
@@ -101,6 +102,7 @@
             </div>
         </div>
     </div>
+</div>
 
 
     <div class="flex flex-auto overflow-y-scroll border shadow-xs rounded-sm bg-gray-50 "
