--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -17,4 +17,18 @@
 
     </div>
 
+    <button type="button"(click)="popup = true">
+        Open
+         </button>
+         <p></p>
+         <div class="overlay" *ngIf="popup">
+             <div class="popup">
+                 <h2>Here i am</h2>
+                 <a class="close" (click)="popup = false">&times;</a>
+                 <div class="content">
+                  Time Remaing {{time}};
+                 </div>
+             </div>
+         </div>
+         
 </div>
