--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -60,6 +60,8 @@
 
             <mapping-request></mapping-request>
 
+            <notification></notification>
+
             <!-- <notifications></notifications> -->
 
 
