--- a/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
+++ b/src/app/modules/loan-recover/loan-inquiry/loan-inquiry.component.html
@@ -281,6 +281,27 @@
                                     </table>
                                 </div>
 
+                                <div class="form-group kt-form__group row">
+                                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                            <mat-label class="customMatLabel">Land lying Un-Cultivated (A-K-M)</mat-label>
+                                            <input readonly matInput placeholder="Enter Land lying Un-Cultivated"
+                                                   formControlName="UncultivatedLand" maxlength="50"/>
+<!--                                            <mat-error *ngIf="hasError('UncultivatedLand', 'pattern')"><strong>Invalid input</strong>-->
+<!--                                            </mat-error>-->
+                                        </mat-form-field>
+                                    </div>
+                                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                            <mat-label class="customMatLabel">Land not to be Cultivated (A-K-M)</mat-label>
+                                            <input matInput readonly placeholder="Enter Land not to be Cultivated"
+                                                   formControlName="NocultivatedLand" maxlength="50"/>
+<!--                                            <mat-error *ngIf="hasError('NocultivatedLand', 'pattern')"><strong>Invalid input</strong>-->
+<!--                                            </mat-error>-->
+                                        </mat-form-field>
+                                    </div>
+                                </div>
+
                                 <h3>Detail</h3>
 
                                 <div class="table-responsive">
