ho zonal report

--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -291,6 +291,15 @@
             </mat-card>
         </div>
 
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="hoZonalExpense()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>
+
+                    <p class="text-md text-black"
+                    >HO/Zonal Expenses Report</p>
+                </div></mat-card>
+        </div>
 
     </div>
 
